update nlp part-wordcloud

--- a/HousingPricePredictor/01_data_explore.ipynb
+++ b/HousingPricePredictor/01_data_explore.ipynb
@@ -17,7 +17,8 @@
     "2. Explain the dependent variable ('SalePrice')\n",
     "3. Parameter relationships\n",
     "4. Data cleaning\n",
-    "5. Test assumptions with data visualization"
+    "5. Test assumptions with data visualization\n",
+    "6. Create a Kaggle account and email me"
    ]
   },
   {
@@ -285,15 +286,6 @@
    "source": [
     "#check the columns\n",
     "df_train.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read the description of the data"
    ]
   },
   {
