--- a/HousingPricePredictor/02_linear_prediction.ipynb
+++ b/HousingPricePredictor/02_linear_prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Housing Price prediction Part 1 - Explore the data\n",
+    "# Housing Price prediction Part 2 - Linear Models\n",
     "## Goal:\n",
     "1. Further data cleaning\n",
     "2. Split the data\n",
@@ -13,8 +13,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introducing the Linear Models (in 5 seconds)\n",
+    "Source: https://www.datacamp.com/tutorial/tutorial-lasso-ridge-regression\n",
+    "1. Linear models assume a linear relationship between x and y variables (eq 1.1)\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/linear_simple.PNG\" alt=\"linear_simple\" style=\"width:40%; border:0;\">\n",
+    "</p>\n",
+    "\n",
+    "2. The goal for a linear model then becomes to optimize the weight (b) via the cost function (eq 1.2)\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/linear_cost_function.PNG\" alt=\"linear_cost\" style=\"width:40%; border:0;\">\n",
+    "</p>\n",
+    "\n",
+    "3. Regularization: to avoid overfitting.\n",
+    "* Lasso: This is a regularization technique used in feature selection using a Shrinkage method also referred to as the penalized regression method. Lasso is short for **Least Absolute Shrinkage and Selection Operator**, which is used both for regularization and model selection. If a model uses the L1 regularization technique, then it is called lasso regression.\n",
+    "* Ridge: Similar to the lasso regression, ridge regression puts a similar constraint on the coefficients by introducing a penalty factor. However, while lasso regression takes the magnitude of the coefficients, ridge regression takes the square. Ridge regression is also referred to as L2 Regularization.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/lasso_ridge_comp.PNG\" alt=\"lasso_ridge_comp\" style=\"width:40%; border:0;\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tutorials"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10138,6 +10169,23 @@
     "        .pivot(columns = 'index',index='data',values=['lr','lasso','ridge','lassoCV'])\n",
     "finalresult"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Course Work tonight: \n",
+    "* Further using any other techniques to transform the data\n",
+    "* Use another linear model that's not part of this demo code\n",
+    "* load the test data and make a submission using your Kaggle account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
