update the word frequency analysis

--- a/BabyAI-NLP/02_word_frequency.ipynb
+++ b/BabyAI-NLP/02_word_frequency.ipynb
@@ -50,10 +50,12 @@
    "metadata": {},
    "source": [
     "# Goal: use simple statistics based NLP methods to analyze the paper published recently\n",
+    "* Learn simple usage of NLTK python package\n",
+    "* understand the PMI (pointwise mutual information) score\n",
     "## Method:\n",
     "1. Download all article abstracts from Webofscience: 1900 + articles\n",
     "2. Visualize the temporal trend\n",
-    "3. Visualize the field categories"
+    "3. Visualize the field categories\n"
    ]
   },
   {
@@ -62,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run these below to install the library and packages\n",
     "# !python -m spacy download en_core_web_sm\n",
     "# !python -m spacy download en_core_web_lg\n",
     "# !pip install spacy\n",
@@ -105,8 +108,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load the data\n",
     "DF = pd.read_csv('data/abstracts-machine learning urban planning-20231203-1932rows.csv', index_col=0)\n",
     "DF = DF[~DF['Abstract'].isna()].reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Tokenize the text"
    ]
   },
   {
@@ -119,7 +130,6 @@
     "en_stopwords = set(stopwords.words('english'))\n",
     "def get_one_class(DF):\n",
     "    # value is a list\n",
-    "    # temp = DF[DF[col].isin(value)].reset_index(drop = True)\n",
     "    comments = DF['Abstract']\n",
     "    comments = comments.astype('str')\n",
     "    \n",
@@ -192,6 +202,29 @@
     "        return True\n",
     "    else:\n",
     "        return False\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create PMI for biagram\n",
+    "\n",
+    "1. What is PMI? [SOURCE](https://medium.com/@bekirufuk/creating-a-pmi-dictionary-for-multiple-documents-using-nltk-b3be4bf31f8e).\n",
+    "\n",
+    "PMI metric depends on occurrences of words (or events in a more general sense) by themselves and co-occurrences with others. It is represented by the simple formula below.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/PMI.webp\" alt=\"pmi\" style=\"width:50%; border:0;\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_word_rank(DF, \n",
     "                  en_stopwords = en_stopwords):\n",
     "    comments = get_one_class(DF)\n",
@@ -228,7 +261,7 @@
     "    # mergedtri['freqxPMI'] = mergedtri['freq'] * mergedtri['PMI']\n",
     "    # mergedtri = mergedtri.sort_values(by = 'freqxPMI', ascending = False)\n",
     "    return mergedbig\n",
-    "# , mergedtri\n"
+    "# , mergedtri"
    ]
   },
   {
@@ -525,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
