--- a/HousingPricePredictor/03_nonlinear_prediction.ipynb
+++ b/HousingPricePredictor/03_nonlinear_prediction.ipynb
@@ -34,7 +34,7 @@
     "* Decision Nodes — the nodes we get after splitting the root nodes are called Decision Node\n",
     "* Leaf Nodes — the nodes where further splitting is not possible are called leaf nodes or terminal nodes\n",
     "* Branch/Sub-tree — just like a small portion of a graph is called sub-graph similarly a sub-section of this decision tree is called sub-tree.\n",
-    "* Pruning — is nothing but cutting down some nodes to stop overfitting.\n",
+    "* Pruning — cutting down some nodes to stop overfitting.\n",
     "* [Source](https://medium.com/@MrBam44/decision-trees-91f61a42c724#:~:text=A%20decision%20tree%20is%20aBagging%2C%20and%20Boosted%20Decision%20Trees)"
    ]
   },
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "0.0.0"
   },
   "orig_nbformat": 4
  },
