--- a/HousingPricePredictor/03_nonlinear_prediction.ipynb
+++ b/HousingPricePredictor/03_nonlinear_prediction.ipynb
@@ -15,7 +15,8 @@
     "* LightGBM\n",
     "* TensorFlow Decision Forests: TensorFlow Decision Forests\n",
     "3. Load all models and conduct feature importance analysis\n",
-    "* permutation importance\n",
+    "* permutation importance [Link](https://scikit-learn.org/stable/modules/permutation_importance.html)\n",
+    "* SHAP package [Link](https://shap.readthedocs.io/en/latest/) (if we have time)\n",
     "\n",
     "### Readings to review:\n",
     "1. Intro to decision tree [Link] (https://medium.com/@MrBam44/decision-trees-91f61a42c724#:~:text=A%20decision%20tree%20is%20a,Bagging%2C%20and%20Boosted%20Decision%20Trees.)"
