--- a/HousingPricePredictor/01_data_explore.ipynb
+++ b/HousingPricePredictor/01_data_explore.ipynb
@@ -251,44 +251,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
-       "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
-       "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
-       "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
-       "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
-       "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
-       "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
-       "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
-       "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
-       "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
-       "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
-       "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
-       "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
-       "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
-       "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
-       "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
-       "       'SaleCondition', 'SalePrice'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#check the columns\n",
-    "df_train.columns"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -375,6 +337,29 @@
     "# The kurtosis for a standard normal distribution is three.\n",
     "print(\"Skewness: %f\" % df_train['SalePrice'].skew())\n",
     "print(\"Kurtosis: %f\" % df_train['SalePrice'].kurt())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**distribution measures**\n",
+    "\n",
+    "* Skewness measures the asymmetry of the probability distribution of a real-valued random variable about its mean. In simpler terms, it tells you how much a distribution is shifted or \"skewed\" to the left or right. A skewness value of 0 indicates a perfectly symmetrical distribution.\n",
+    "* Kurtosis measures the \"tailedness\" of the probability distribution of a real-valued random variable. It describes how heavy the tails of the distribution are compared to a normal distribution. Higher kurtosis values indicate that the distribution has heavier tails and a sharper peak, while lower kurtosis values indicate lighter tails and a flatter peak.\n",
+    "* The Sale Price kurtosis is 6.536. Since a normal distribution has a kurtosis value of 3, this higher value indicates that the Sale Price distribution has heavier tails and a more peaked center than a normal distribution as can be seen in the distribution above.\n",
+    "\n",
+    "**Target Variable Summary**:\n",
+    "\n",
+    "Our target variable for this problem is the Sale Price of houses. Let's summarize the key insights about this variable:\n",
+    "\n",
+    "* There are no records with less than zero. This is expected, as house prices should always be positive.\n",
+    "* The House Sale Price variable is not normally distributed. This is important because certain machine learning algorithms assume that the input data is normally distributed.\n",
+    "* The dataset has a lot of extreme values (outliers) and a very sharp peak. Outliers can significantly impact the performance of our models, so we'll need to address them during preprocessing.\n",
+    "* The distribution of house prices exhibits positive (right-skewed) skewness. This means that the majority of the houses are priced lower than the average, with a few houses having significantly higher prices (outliers).\n",
+    "* The peakedness of the distribution lies between 80,000 and 240,000. This indicates that the majority of the houses fall within this price range.\n",
+    "\n",
+    "As we proceed with our analysis, we will keep these characteristics in mind to ensure that our models are able to make accurate predictions. We may need to apply data transformations or outlier removal techniques to better fit the assumptions of our chosen machine learning algorithms."
    ]
   },
   {
