--- a/HousingPricePredictor/02_linear_prediction.ipynb
+++ b/HousingPricePredictor/02_linear_prediction.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
        "5        WD        Normal     250000  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -9556,7 +9556,7 @@
        "[1001 rows x 503 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9566,10 +9566,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv('./data/train_clean.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Split\n",
+    "##### Course work: use the same data cleaning method to clean the test data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Split\n",
     "* Typically split data by train and test"
    ]
   },
@@ -9588,7 +9604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data standardization"
+    "## Data standardization"
    ]
   },
   {
@@ -9613,7 +9629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear model first run"
+    "## Linear model first run"
    ]
   },
   {
@@ -9847,7 +9863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5-fold cross-validation\n",
+    "## 5-fold cross-validation\n",
     "\n",
     "* Lasso linear model with iterative fitting along a regularization path:[LINK](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LassoCV.html)\n",
     "* **cv** (int), cross-validation generator or iterable, default=None"
@@ -10204,7 +10220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
