update nonlinear estimation

--- a/HousingPricePredictor/01_exploratory_data_analysis.ipynb
+++ b/HousingPricePredictor/01_exploratory_data_analysis.ipynb
@@ -594,7 +594,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Check data type"
+    "## 3. Check data type\n",
+    "* Numeric value\n",
+    "* Ordinal value\n",
+    "* Categorical value"
    ]
   },
   {
