--- a/HousingPricePredictor/02_linear_prediction.ipynb
+++ b/HousingPricePredictor/02_linear_prediction.ipynb
@@ -16,23 +16,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introducing the Linear Models (in 5 seconds)\n",
+    "# Common Linear Models (10 minutes)\n",
     "Source: https://www.datacamp.com/tutorial/tutorial-lasso-ridge-regression\n",
     "1. Linear models assume a linear relationship between x and y variables (eq 1.1)\n",
     "<p align=\"center\">\n",
-    "<img src=\"../asset/linear_simple.PNG\" alt=\"linear_simple\" style=\"width:40%; border:0;\">\n",
+    "<img src=\"../asset/linear_simple.png\" alt=\"linear_simple\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
     "\n",
     "2. The goal for a linear model then becomes to optimize the weight (b) via the cost function (eq 1.2)\n",
     "<p align=\"center\">\n",
-    "<img src=\"../asset/linear_cost_function.PNG\" alt=\"linear_cost\" style=\"width:40%; border:0;\">\n",
+    "<img src=\"../asset/linear_cost_function.png\" alt=\"linear_cost\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
     "\n",
     "3. Regularization: to avoid overfitting.\n",
     "* Lasso: This is a regularization technique used in feature selection using a Shrinkage method also referred to as the penalized regression method. Lasso is short for **Least Absolute Shrinkage and Selection Operator**, which is used both for regularization and model selection. If a model uses the L1 regularization technique, then it is called lasso regression.\n",
     "* Ridge: Similar to the lasso regression, ridge regression puts a similar constraint on the coefficients by introducing a penalty factor. However, while lasso regression takes the magnitude of the coefficients, ridge regression takes the square. Ridge regression is also referred to as L2 Regularization.\n",
     "<p align=\"center\">\n",
-    "<img src=\"../asset/lasso_ridge_comp.PNG\" alt=\"lasso_ridge_comp\" style=\"width:40%; border:0;\">\n",
+    "<img src=\"../asset/lasso_ridge_comp.png\" alt=\"lasso_ridge_comp\" style=\"width:40%; border:0;\">\n",
     "</p>"
    ]
   },
