--- a/ClusterSpacewithMobility/01_concept.ipynb
+++ b/ClusterSpacewithMobility/01_concept.ipynb
@@ -38,10 +38,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fuzzy clustering\n",
+    "Fuzzy logic principles can be used to cluster multidimensional data, assigning each point a membership in each cluster center from 0 to 100 percent.\n",
+    "* Attribution to a cluster: In fuzzy clustering, each point has a probability of belonging to each cluster, rather than completely belonging to just one cluster as it is the case in the traditional k-means. In Fuzzy-C Means clustering, each point has a weighting associated with a particular cluster, so a point doesn’t sit “in a cluster” as much as has a weak or strong association to the cluster, which is determined by the inverse distance to the center of the cluster.\n",
+    "* Speed: Fuzzy-C means will tend to run slower than K means, since it’s actually doing more work. Each point is evaluated with each cluster, and more operations are involved in each evaluation. K-Means just needs to do a distance calculation, whereas fuzzy c means needs to do a full inverse-distance weighting (See equation below).\n",
+    "* Fuzzy c-means is a special case of K-means when the probability function used is simply 1 if the data point is closest to a centroid and 0 otherwise.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/softclustering_hardclustering.webp\" alt=\"kmean\" style=\"width:50%; border:0;\">\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/fuzzycmean.webp\" alt=\"kmean\" style=\"width:50%; border:0;\">\n",
+    "</p>\n",
+    "Each iteration recalculate the centroid of the cluster as the weighted centroid given the probabilities of membership of all data points xi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
