update linear model write ups

--- a/HousingPricePredictor/02_linear_models.ipynb
+++ b/HousingPricePredictor/02_linear_models.ipynb
@@ -6,31 +6,53 @@
    "source": [
     "# Housing Price prediction Part 2 - Linear Models\n",
     "## Goal:\n",
-    "1. Further data cleaning\n",
-    "2. Split the data\n",
-    "3. Data Standardization\n",
-    "4. Compare Linear, Ridge, Lasso regression"
+    "* Understand overfit, bias, variance, and regularization\n",
+    "* Understand the differences between Ordinary Least Square Linear Regressions, Lasso Regressions, Ridge Regressions\n",
+    "* Perform data split\n",
+    "* Use cross-validation to find best alpha for a Lasso Regression\n",
+    "* Understand model evaluation metrics: R2, MSE, RMSE\n",
+    "* **Self-guide**: the student needs to finish the [homework](https://github.com/brookefzy/pitaya/blob/main/HousingPricePredictor/02b_advanced_feature_engineering.ipynb) for the first day."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Common Linear Models (10 minutes)\n",
+    "## Bias-variance Tradeoff\n",
+    "* Bias (in plain English) - is the difference between the average prediction of our model and the correct value which we are trying to predict. \n",
+    "* Variance - is the variability of model prediction for a given data point or a value which tells us spread of our data.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/overfit_bias.png\" alt=\"overfit_bias\" style=\"width:60%; border:0;\">\n",
+    "</p>\n",
+    "\n",
+    "Image credit [link](https://towardsdatascience.com/understanding-the-bias-variance-tradeoff-165e6942b229)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intro to Linear Models (10 minutes)\n",
     "Source: https://www.datacamp.com/tutorial/tutorial-lasso-ridge-regression\n",
-    "1. Linear models assume a linear relationship between x and y variables (eq 1.1)\n",
+    "1. Linear models assume a linear relationship between x and y variables\n",
     "<p align=\"center\">\n",
     "<img src=\"../asset/linear_simple.png\" alt=\"linear_simple\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
     "\n",
-    "2. The goal for a linear model then becomes to optimize the weight (b) via the cost function (eq 1.2)\n",
+    "2. The goal for a linear model then becomes to optimize the weight (b) via the cost function.\n",
     "<p align=\"center\">\n",
-    "<img src=\"../asset/linear_cost_function.png\" alt=\"linear_cost\" style=\"width:40%; border:0;\">\n",
+    "<img src=\"../asset/linear_cost_function.webp\" alt=\"linear_cost\" style=\"width:40%; border:0;\">\n",
     "</p>\n",
     "\n",
-    "3. Regularization: to avoid overfitting.\n",
+    "3. Regularization: use \\\\(  \\lambda \\\\) to avoid overfitting,<br>\n",
     "* Lasso: This is a regularization technique used in feature selection using a Shrinkage method also referred to as the penalized regression method. Lasso is short for **Least Absolute Shrinkage and Selection Operator**, which is used both for regularization and model selection. If a model uses the L1 regularization technique, then it is called lasso regression.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/lasso_cost.webp\" alt=\"lasso_cost\" style=\"width:40%; border:0;\">\n",
+    "</p>\n",
     "* Ridge: Similar to the lasso regression, ridge regression puts a similar constraint on the coefficients by introducing a penalty factor. However, while lasso regression takes the magnitude of the coefficients, ridge regression takes the square. Ridge regression is also referred to as L2 Regularization.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/ridge_cost.webp\" alt=\"ridge_cost\" style=\"width:40%; border:0;\">\n",
+    "</p>\n",
     "<p align=\"center\">\n",
     "<img src=\"../asset/lasso_ridge_comp.png\" alt=\"lasso_ridge_comp\" style=\"width:40%; border:0;\">\n",
     "</p>"
@@ -996,13 +1018,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Course work: use the same data cleaning method to clean the test data "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Data Split\n",
     "* Typically split data by train and test"
    ]
@@ -1047,7 +1062,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear model first run"
+    "## Linear model first run\n",
+    "* Understand the evaluation metrics: R2, MSE, RMSE, MAE\n",
+    "* R-Squared (R²):  - measures the proportion of the total variation in the dependent variable that is captured by the model.\n",
+    "$$R^2 = 1 - (SSR/SST)$$\n",
+    " a. SSR (Sum of Squared Residuals) is the sum of the squares of the residuals. The residuals are the difference between the actual values of the dependent variable and the predicted values from the regression model.\n",
+    " \n",
+    " b. SST (Total Sum of Squares) is the total sum of squares, which is the sum of the differences between the actual values of the dependent variable and the mean value of the dependent variable, all squared.\n",
+    "* Mean Squared Error (MSE): This is the average of the squared differences between the predicted and actual values. It gives more weight to larger differences and is particularly useful when we have unexpected values that we want to take into account.\n",
+    "$$MSE = 1/n \\times \\sum_{i=1}^n(Y_i - \\hat{Y_i})^2$$\n",
+    "\n",
+    "* Root Mean Squared Error (RMSE): This is the square root of the MSE. By square rooting the MSE, we return the error metric to the same unit as the target variable, which can often make it easier to interpret.\n",
+    "* Mean Absolute Error (MAE): This is the average of the absolute differences between the predicted and actual values. Unlike MSE, it treats all differences equally and is less sensitive to outliers."
    ]
   },
   {
@@ -1282,6 +1308,10 @@
    "metadata": {},
    "source": [
     "## 5-fold cross-validation\n",
+    "* What is K-fold cross validation? [Source](https://towardsdatascience.com/what-is-k-fold-cross-validation-5a7bb241d82f)\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../asset/five_fold_cross.webp\" alt=\"5-fold\" style=\"width:60%; border:0;\">\n",
+    "</p>\n",
     "\n",
     "* Lasso linear model with iterative fitting along a regularization path:[LINK](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LassoCV.html)\n",
     "* **cv** (int), cross-validation generator or iterable, default=None"
@@ -1328,7 +1358,6 @@
     "    X_test = xscaler.transform(X_test)\n",
     "    yscaler = StandardScaler()\n",
     "    y_train = yscaler.fit_transform(y_train.reshape(-1,1)).flatten()\n",
-    "\n",
     "    return X_train, X_test, y_train, y_test\n",
     "\n",
     "def train_model(model, X_train, y_train, X_test, y_test):\n",
