--- a/HousingPricePredictor/01_exploratory_data_analysis.ipynb
+++ b/HousingPricePredictor/01_exploratory_data_analysis.ipynb
@@ -711,7 +711,8 @@
     "print(\"p-value: \", stats.linregress(data[var], data['SalePrice']).pvalue)\n",
     "\n",
     "# get the slope and intercept of the regression line\n",
-    "print(\"slope: \", stats.linregress(data[var], data['SalePrice']).slope)"
+    "print(\"slope: \", stats.linregress(data[var], data['SalePrice']).slope)\n",
+    "# TODO: how to get the intercept?"
    ]
   },
   {
@@ -1022,6 +1023,15 @@
     "              ax=ax)\n",
     "plt.xticks(np.arange(0, len(data[var].unique()), 10), rotation=45)\n",
     "# can anyone find a problem of this plot?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: add another plot to show the relationship between one ordinal variable and the sale price"
    ]
   },
   {
