--- a/HousingPricePredictor/02_linear_models.ipynb
+++ b/HousingPricePredictor/02_linear_models.ipynb
@@ -1062,7 +1062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear model first run\n",
+    "## Run the linear model and understand their performance\n",
     "* Understand the evaluation metrics: R2, MSE, RMSE, MAE\n",
     "* R-Squared (R²):  - measures the proportion of the total variation in the dependent variable that is captured by the model.\n",
     "$$R^2 = 1 - (SSR/SST)$$\n",
@@ -1072,8 +1072,10 @@
     "* Mean Squared Error (MSE): This is the average of the squared differences between the predicted and actual values. It gives more weight to larger differences and is particularly useful when we have unexpected values that we want to take into account.\n",
     "$$MSE = 1/n \\times \\sum_{i=1}^n(Y_i - \\hat{Y_i})^2$$\n",
     "\n",
-    "* Root Mean Squared Error (RMSE): This is the square root of the MSE. By square rooting the MSE, we return the error metric to the same unit as the target variable, which can often make it easier to interpret.\n",
-    "* Mean Absolute Error (MAE): This is the average of the absolute differences between the predicted and actual values. Unlike MSE, it treats all differences equally and is less sensitive to outliers."
+    "* Root Mean Squared Error (RMSE): This is the square root of the MSE. By square rooting the MSE, we return the error metric to the same unit as the target variable, which can often make it easier to interpret. (The goal is to minimize large errors)\n",
+    "\n",
+    "* Mean Absolute Error (MAE): This is the average of the absolute differences between the predicted and actual values. Unlike MSE, it treats all differences equally and is less sensitive to outliers.\n",
+    "$$MAE = 1/n \\times \\sum_{i=1}^n|Y_i - \\hat{Y_i}|$$"
    ]
   },
   {
