--- a/HousingPricePredictor/03_nonlinear_models.ipynb
+++ b/HousingPricePredictor/03_nonlinear_models.ipynb
@@ -12,8 +12,9 @@
     "* XGBoost\n",
     "\n",
     "* What more you should know but we will not cover today:\n",
-    "> LightGBM\n",
-    "> TensorFlow Decision Forests: TensorFlow Decision Forests\n",
+    "a. LightGBM\n",
+    "\n",
+    "b. TensorFlow Decision Forests: TensorFlow Decision Forests\n",
     "2. Hyperparameter Tuning\n",
     "3. Load all models and conduct feature importance analysis\n",
     "* permutation importance [Link](https://scikit-learn.org/stable/modules/permutation_importance.html)\n",
