--- a/HousingPricePredictor/03_nonlinear_models.ipynb
+++ b/HousingPricePredictor/03_nonlinear_models.ipynb
@@ -11,17 +11,17 @@
     "* Gradient Boosting Regression\n",
     "* XGBoost\n",
     "\n",
-    "* What more you should know but we will not cover today:\n",
-    "a. LightGBM\n",
-    "\n",
-    "b. TensorFlow Decision Forests: TensorFlow Decision Forests\n",
+    "**What more you should know but we will not cover today:**\n",
+    "* LightGBM\n",
+    "* TensorFlow Decision Forests: TensorFlow Decision Forests\n",
     "2. Hyperparameter Tuning\n",
-    "3. Load all models and conduct feature importance analysis\n",
+    "3. Compare model performance\n",
+    "4. Load all models and conduct feature importance analysis\n",
     "* permutation importance [Link](https://scikit-learn.org/stable/modules/permutation_importance.html)\n",
-    "* SHAP package [Link](https://shap.readthedocs.io/en/latest/) (if we have time)\n",
+    "5. Intro to SHAPLEY Values\n",
     "\n",
     "### Readings to review:\n",
-    "1. Intro to decision tree [Link] (https://medium.com/@MrBam44/decision-trees-91f61a42c724#:~:text=A%20decision%20tree%20is%20a,Bagging%2C%20and%20Boosted%20Decision%20Trees.)"
+    "1. Intro to decision tree [Link](https://medium.com/@MrBam44/decision-trees-91f61a42c724#:~:text=A%20decision%20tree%20is%20a,Bagging%2C%20and%20Boosted%20Decision%20Trees.)"
    ]
   },
   {
@@ -2527,7 +2527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The famous SHAPLEY plot\n",
+    "## The famous SHAPLEY plot\n",
     "Shapley values are a widely used approach from cooperative game theory that come with desirable properties.\n",
     "* https://shap.readthedocs.io/en/latest/example_notebooks/overviews/An%20introduction%20to%20explainable%20AI%20with%20Shapley%20values.html\n",
     "* Original Paper: Chen, H., Covert, I.C., Lundberg, S.M. et al. Algorithms to estimate Shapley value feature attributions. Nat Mach Intell 5, 590–601 (2023). https://doi-org.eproxy.lib.hku.hk/10.1038/s42256-023-00657-x\n",
