--- a/BabyAI-NLP/02_word_frequency.ipynb
+++ b/BabyAI-NLP/02_word_frequency.ipynb
@@ -1870,6 +1870,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Course work:\n",
+    "Only use trigram to reconduct the analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
