update opencv piece

--- a/BabyAI-CV/scripts/01_videoprocessing.ipynb
+++ b/BabyAI-CV/scripts/01_videoprocessing.ipynb
@@ -15,14 +15,89 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read the video and convert save it to mp4 from second 14 to 30\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frames per second using video.get(cv2.CAP_PROP_FPS) : 30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "videopath = \"../data/cityroller.mp4\"\n",
+    "video = cv2.VideoCapture(videopath)\n",
+    "fps = video.get(cv2.CAP_PROP_FPS)\n",
+    "print(\"Frames per second using video.get(cv2.CAP_PROP_FPS) : {0}\".format(fps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "width: 1920, height: 922\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the width and height of the video\n",
+    "width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "print(\"width: {}, height: {}\".format(width, height))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trim the video from second 14 to 30\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "out = cv2.VideoWriter('../data/cityroller-trim.mp4', fourcc, fps, (width, height))\n",
+    "video.set(cv2.CAP_PROP_POS_FRAMES, fps*10)\n",
+    "\n",
+    "# read the video and convert save it to mp4 from second 14 to 30\n",
+    "success, frame = video.read()\n",
+    "count = 0\n",
+    "for success, frame in iter(video.read, (False, None)):\n",
+    "    count += 1\n",
+    "    if count >= fps*14:\n",
+    "        out.write(frame)\n",
+    "    if count > fps*30:\n",
+    "        break\n",
+    "    \n",
+    "out.release()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ec73ef6d70>"
+       "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -38,52 +113,9 @@
     }
    ],
    "source": [
-    "# read the video and convert save it to mp4 from second 14 to 30\n",
-    "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "videopath = \"../data/cityroller.mp4\"\n",
-    "video = cv2.VideoCapture(videopath)\n",
-    "fps = video.get(cv2.CAP_PROP_FPS)\n",
-    "width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
-    "out = cv2.VideoWriter('../data/cityroller-trim.mp4', fourcc, fps, (width, height))\n",
-    "video.set(cv2.CAP_PROP_POS_FRAMES, fps*10)\n",
-    "\n",
-    "# read the video and convert save it to mp4 from second 14 to 30\n",
-    "success, frame = video.read()\n",
-    "count = 0\n",
-    "for success, frame in iter(video.read, (False, None)):\n",
-    "    count += 1\n",
-    "    if count >= fps*14:\n",
-    "        out.write(frame)\n",
-    "    if count > fps*30:\n",
-    "        break\n",
-    "    \n",
-    "out.release()\n",
     "# plot the frame see how it looks\n",
     "plt.imshow(frame)\n",
     "# save one frame as jpg\n",
-    "cv2.imwrite(\"../data/cityroller-frame.jpg\", frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "cv2.imwrite(\"../data/cityroller-frame.jpg\", frame)"
    ]
   },
